# mirror_r-type

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARK.md  BUILD.md  CLIENTTEMP  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestTestfile.cmake  DOC.md  Dockerfile.client  Dockerfile.prometheus  Dockerfile.server  Makefile  README.md  REPONSES_COMPETENCES.md  SERVERTEMP  build.sh  clientTemp  client_app  cmake_install.cmake  conanfile.txt  doc.txt  docker-compose.yml  install_vcpkg.sh  prometheus.yml  serverTemp  temp  testVoiceClient  testVoiceServer  test_mic  testmicro.cpp  valgrind_errors  valgtemp  voip_client  voip_client.cpp  voip_server  (+1 more)
.github/workflows/: RTYPE.yml  clang-format.yml  format-push.yml  push-miror.yml
client/: CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  GraphicsManager.cpp  GraphicsManager.hpp  GraphicsManagerSFML.cpp  GraphicsManagerSFML.hpp  KeybindManager.cpp  KeybindManager.hpp  NetworkECSMediator.cpp  NetworkECSMediator.hpp  RType.cpp  RType.hpp  TickSystem.cpp  TickSystem.hpp  VoiceManager.cpp  VoiceManager.hpp  assetsPath.hpp  client.cpp  client_network_system.hpp  main.cpp  standalone_game.cpp  windowSize.hpp
client/Network/: NetworkManager.cpp  NetworkManager.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
doc/: protocol.txt
ecs/: ComponentFactory.hpp  GraphicsManager.cpp  GraphicsManager.hpp  IComponent.hpp  allComponentsInclude.hpp  components.hpp  ecs.cpp  ecs.hpp  enemyFactory.cpp  enemyFactory.hpp  entity.cpp  entity.hpp  entityManager.cpp  entityManager.hpp  graphicsComponents.hpp  keybindMenu.cpp  keybindMenu.hpp  network_components.hpp  systems.hpp  textBox.cpp  textBox.hpp  using.hpp  wavePatterns.hpp  waveSystem.hpp
ecs/components/: AnimatedPlayerSpriteComponent.cpp  AnimatedPlayerSpriteComponent.hpp  AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.hpp  BackgroundScrollComponent.cpp  BackgroundScrollComponent.hpp  BirdComponent.cpp  BirdComponent.hpp  BonusComponent.cpp  BonusComponent.hpp  CenteredComponent.cpp  CenteredComponent.hpp  CircularMotionComponent.cpp  CircularMotionComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  EnemyComponent.cpp  EnemyComponent.hpp  GameStateComponent.cpp  GameStateComponent.hpp  GravityComponent.cpp  GravityComponent.hpp  HealthBarComponent.cpp  HealthBarComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  InputComponent.cpp  InputComponent.hpp  JumpComponent.cpp  JumpComponent.hpp  LaserWarningComponent.cpp  LaserWarningComponent.hpp  PipeComponent.cpp  PipeComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  ProjectileComponent.cpp  ProjectileComponent.hpp  Rect.cpp  Rect.hpp  (+14 more)
ecs/systems/: AnimationSystem.cpp  AnimationSystem.hpp  BackgroundSystem.hpp  BonusSystem.cpp  BonusSystem.hpp  BoundarySystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  GameLogicSystem.cpp  GameLogicSystem.hpp  GravitySystem.hpp  InputSystem.cpp  InputSystem.hpp  JumpSystem.hpp  LaserWarningSystem.hpp  MovementSystem.hpp  OffscreenCleanupSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  getActualPosition.hpp
game/: game.cpp  graphics.cpp  graphics.hpp
network/: network_messages.hpp  udp_socket.hpp
server/: AdministratorPanel.cpp  AdministratorPanel.hpp  CMakeLists.txt  main.cpp  server.cpp  server_network_system.hpp  sqlAPI.cpp  sqlAPI.hpp  sqlSchema.hpp
server/.cache/clangd/index/: ConfigurationManager.hpp.107B30DBC52A7674.idx  main.cpp.8A379E49F1FCFB73.idx
server/Game/: ConfigurationManager.cpp  ConfigurationManager.hpp  GameLoader.cpp  GameLoader.hpp  GameLoop.cpp  GameLoop.hpp  GameMediator.cpp  GameMediator.hpp  GameServer.cpp  GameServer.hpp  RTypeServer.cpp  RTypeServer.hpp  sendDataGame.cpp
server/Include/Errors/: ConfigurationErrors.hpp  EventUnknown.hpp
server/Lobby/: Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp
server/Mediator/: AMediator.cpp  AMediator.hpp  EventUnknow.hpp  IMediator.hpp
server/Network/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkMediator.cpp  NetworkMediator.hpp
server/Network/TCP/: TCPManager.cpp  TCPManager.hpp
server/Network/UDP/: UDPManager.cpp  UDPManager.hpp
server/Prometheus/: PrometheusServer.cpp  PrometheusServer.hpp
server/exempleTranfersData/: Makefile  clientExemple.cpp  clientExempleUDP.cpp  clientUDPTCP.cpp  client_exemple_UDP  client_exemple_UDP_TCP  serverExemple.cpp  serverExempleUDP.cpp  server_exemple_UDP
server/transferData/: opcode.hpp  serializers.cpp  structTransfer.hpp  transferData.cpp  transferData.hpp
transferData/: hashUtils.cpp  hashUtils.hpp  opcode.hpp  serializers.cpp  structTransfer.hpp  transferData.cpp  transferData.hpp
